# ObserverManager

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  Tests.cpp  main.cpp  run_tests.sh
ObserverManager/: BaseObserverProtocol.cpp  BaseObserverProtocol.h  ObserverContainer.h  ObserverManager.cpp  ObserverManager.h
Tests/: Basic.cpp  Copy.cpp  Jim.cpp  JimTest.cpp  SampleProtocols.h  Speed.cpp  SpeedTest.cpp  TestProtocols.h  Tests.cpp
